fix overflow note list on phone

--- a/src/responsive.css
+++ b/src/responsive.css
@@ -1,5 +1,9 @@
 /* Tablet Size */
 @media screen and (max-width: 768px) {  
+  html, body {
+    height: fit-content;
+  }
+
   main {
     min-height: fit-content;
     display: flex;
